topics/web/traefik/lab/kubernetes/routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: backend-mtls
  namespace: traefik-notes
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-mtls.localhost`)
    services:
    - name: backend-a
      port: 8443
      scheme: https
      serversTransport: backend-mtls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: backend-mtls
  namespace: traefik-notes
spec:
  entryPoints:
  - backendtls
  routes:
  - match: HostSNI(`*`)
    services:
    - name: backend-a
      port: 8443
      serversTransport: backend-mtls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: echo
  namespace: traefik-notes
spec:
  entryPoints:
  - echo
  routes:
  - match: HostSNI(`*`)
    services:
    - name: backend-a
      port: 7000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: weighted
  namespace: traefik-notes
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-weighted.localhost`) && Method(`GET`)
    services:
    - name: weighted
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mirror
  namespace: traefik-notes
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-mirror.localhost`) && Method(`GET`)
    services:
    - name: mirror
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grpc
  namespace: traefik-notes
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-grpc.localhost`)
    services:
    - name: backend-a
      port: 50051
      scheme: h2c
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ws
  namespace: traefik-notes
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`k8s-ws.localhost`)
    services:
    - name: backend-a
      port: 8081
      scheme: http
